# ft2232h-spi

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFTDI.cmake  FindMPSSE_SPI.cmake
ft2232h-spi/: CMakeLists.txt  exceptions.h  ft2232h-spi-libftdi.cpp  ft2232h-spi.h  packet-detail.h  packet.cpp  packet.h  util.h
ft2232h-spi-tests/: CMakeLists.txt  packet-tests.cpp  test-main.cpp
ft2232h-spi/cmake/: ft2232h-spi-config.cmake.in
